--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html, body{
 }
 
 body{
-	background-image:url('/img/zoom.gif');
+	background-image:url('../img/zoom.gif');
 	background-size:cover;
 	background-position:center center;
 	background-repeat:no-repeat;
