--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body:before{
 	vertical-align:middle;
 	font-size:16px;
 	padding:20px 0px;
+	width:100%;
 }
 
 h1{
@@ -52,10 +53,40 @@ h1{
 	float:right;
 }
 
-canvas{
+.mitosis{
 	float:right;
 	width:50%;
 	height:320px;
+	font-size:0px;
+	text-align:left;
+}
+
+.mitosis .universes{
+	width:320px;
+	height:320px;
+	display:inline-block;
+	vertical-align:middle;
+}
+
+.mitosis .universes:before{
+	content:'';
+	height:100%;
+	width:0px;
+	display:inline-block;
+	vertical-align:middle;
+}
+
+.mitosis .universes div{
+	vertical-align:middle;
+	display:inline-block;
+}
+
+
+.mitosis img{
+	border-radius:50%;
+	margin:10px;
+	height:260px;
+	/*box-shadow:0px 1px 0px #000;*/
 }
 
 #cases p{
