--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 html, body{
 	margin:0px;
 	padding:0px;
-	background:#333;
+	background:#000;
 	color:#FFF;
 	text-shadow:1px 1px 0px #000;
 }
@@ -12,7 +12,16 @@ body{
 	/*this is for our vertical align CSS hack! inline-block puts whitespace between elements, which sux.*/
 	text-align:left;
 	font-size:0px;
-	padding:0px 20px;
+
+	background-image:url('../img/space.png');
+	background-size:80vh 80vh;
+	background-position:right center;
+}
+
+body.shrinking{
+	transition:60s ease;
+
+	background-size:5px 5px;
 }
 
 /*part of the vertical-align CSS hack*/
@@ -28,8 +37,17 @@ body:before{
 	display:inline-block;
 	vertical-align:middle;
 	font-size:16px;
-	padding:20px 0px;
-	width:100%;
+	padding:20px 40px;
+	width:50%;
+
+	background:rgba(0,0,0,0.6);
+
+	border-radius:3px;
+
+	/*vertical alignment hack*/
+	font-size:0px;
+
+	max-width:550px;
 }
 
 h1{
@@ -45,48 +63,12 @@ h1{
 }
 
 #cases{
-	width:50%;
+	width:100%;
 	font-family:'Menlo', monospace;
 	font-size:16px;
 	text-align:left;
 	min-height:320px;
-	float:right;
-}
-
-.mitosis{
-	float:right;
-	width:50%;
-	height:320px;
-	font-size:0px;
-	text-align:left;
-}
-
-.mitosis .universes{
-	width:320px;
-	height:320px;
-	display:inline-block;
-	vertical-align:middle;
-}
-
-.mitosis .universes:before{
-	content:'';
-	height:100%;
-	width:0px;
-	display:inline-block;
-	vertical-align:middle;
-}
-
-.mitosis .universes div{
-	vertical-align:middle;
-	display:inline-block;
-}
-
-
-.mitosis img{
-	border-radius:50%;
-	margin:10px;
-	height:260px;
-	/*box-shadow:0px 1px 0px #000;*/
+	float:left;
 }
 
 #cases p{
