--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,9 @@ body:before{
 		padding:20px;
 		border-radius:none;
 		height:100%;
+
+		-webkit-box-sizing:border-box;
+		box-sizing:border-box;
 	}
 }
 
